--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type='text/javascript' src='https://platform.twitter.com/widgets.js'>
 </html>
